- Fixed main window overflow - Added calendar component

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,26 @@ body {
     filter: invert(1);
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+  
+  /* Track */
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+}
+   
+  /* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgb(131, 131, 131); 
+    border-radius: 10px;
+}
+  
+  /* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(68, 68, 68, 0.5); 
+}
+
 /* .invert-to-white-second {
     filter: invert(1);
 } */
